Archive2/c3/f024c510315f46/output
main.cpp:11:5: error: attempt to use a deleted function
    B(){ };
    ^
main.cpp:5:5: note: '~A' has been explicitly marked deleted here
    ~A() = delete;
    ^
main.cpp:11:5: error: attempt to use a deleted function
    B(){ };
    ^
main.cpp:5:5: note: '~A' has been explicitly marked deleted here
    ~A() = delete;
    ^
2 errors generated.
